--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "http-proxy-middleware": "^0.17.3",
+    "mongoose": "^4.10.8",
     "npm-run-all": "^4.0.1",
     "xp": "^1.0.1"
   },
